--- a/style.css
+++ b/style.css
@@ -1,48 +1,57 @@
 * {
   min-height: 0;
-  min-width: 0;
-  font-family: Lexend, "JetBrainsMono NFP";
+  font-family: "JetBrainsMono Nerd Font";
+  font-weight: bold;
   font-size: 16px;
-  font-weight: 600;
 }
 
 window#waybar {
   transition-property: background-color;
   transition-duration: 0.5s;
-  /* background-color: #1e1e2e; */
-  /* background-color: #181825; */
-  background-color: #11111b;
-  /* background-color: rgba(24, 24, 37, 0.6); */
+  background-color: #1d1f28;
+  border-radius: 0px;
+}
+
+window#waybar.hidden {
+  opacity: 1.5;
+}
+
+#workspaces {
+  background-color: transparent;
 }
 
 #workspaces button {
-  padding: 0.3rem 0.6rem;
-  margin: 0.4rem 0.25rem;
-  border-radius: 6px;
-  /* background-color: #181825; */
-  background-color: #1e1e2e;
-  color: #cdd6f4;
-}
-
-#workspaces button:hover {
-  color: #1e1e2e;
-  background-color: #cdd6f4;
-}
-
-#workspaces button.active {
-  background-color: #1e1e2e;
+  all: initial;
+  min-width: 0;
+  box-shadow: inset 0 -3px transparent;
+  padding: 2px 10px;
+  min-height: 0;
+  margin: 4px 4px;
+  border-radius: 8px;
+  background-color: #21232e;
   color: #89b4fa;
 }
 
+#workspaces button:hover {
+  box-shadow: inherit;
+  text-shadow: inherit;
+  color: #21232e;
+  background-color: #89b4fa;
+}
+
+#workspaces button.active {
+  color: #bd93f9;
+  background-color: #21232e;
+}
+
 #workspaces button.urgent {
-  background-color: #1e1e2e;
-  color: #f38ba8;
+  background-color: #f38ba8;
 }
 
 #clock,
 #pulseaudio,
 #custom-logo,
-#custom-power,
+#custom-network,
 #custom-spotify,
 #custom-notification,
 #cpu,
@@ -50,24 +59,25 @@ window#waybar {
 #memory,
 #window,
 #mpris {
-  padding: 0.3rem 0.6rem;
-  margin: 0.4rem 0.25rem;
-  border-radius: 6px;
-  /* background-color: #181825; */
-  background-color: #1e1e2e;
+  min-height: 0;
+  padding: 2px 6px;
+  margin: 2px;
+  border-radius: 8px;
+  background-color: #21232e;
+  color: #89b4fa;
 }
 
 #mpris.playing {
-  color: #a6e3a1;
+  color: #1ed760
 }
 
 #mpris.paused {
-  color: #9399b2;
+  color: #89b4fa;
 }
 
 #custom-sep {
   padding: 0px;
-  color: #585b70;
+  color: #89b4fa;
 }
 
 window#waybar.empty #window {
@@ -75,42 +85,73 @@ window#waybar.empty #window {
 }
 
 #cpu {
-  color: #94e2d5;
+  color: #8be9fd;
 }
 
 #memory {
-  color: #cba6f7;
+  color: #50fa7b;
 }
 
 #clock {
-  color: #74c7ec;
+  color: #ff5555;
 }
 
 #clock.simpleclock {
-  color: #89b4fa;
+  color: #bd93f9;
 }
 
 #window {
-  color: #cdd6f4;
+  color: #bd93f9;
 }
 
 #pulseaudio {
-  color: #b4befe;
+  color: #ffb86c;
 }
 
 #pulseaudio.muted {
-  color: #a6adc8;
+  color: #89b4fa;
 }
 
 #custom-logo {
   color: #89b4fa;
 }
 
+#custom-bluetooth {
+  background-color: #21232e;
+  color: #89b4fa;
+  padding: 2px 6px;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 2px;
+  border-radius: 8px;
+}
+
+#custom-notification {
+  background-color: #21232e;
+  color: #89b4fa;
+  padding: 2px 6px;
+  font-size: 16px;
+  margin: 2px;
+  border-radius: 8px;
+}
+
+#custom-network {
+  color: #89b4fa;
+  padding-right: 5px;
+  font-size: 16px;
+  margin: 2px;
+  border-radius: 8px;
+}
+
 #custom-power {
-  color: #f38ba8;
+  color: #ff5555;
+  padding-right: 5px;
+  font-size: 16px;
+  margin: 2px;
+  border-radius: 8px;
 }
 
 tooltip {
-  background-color: #181825;
-  border: 2px solid #89b4fa;
+  background-color: #21232e;
+  border: 2px solid #bd93f9;
 }
